// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. card loading state 1`] = `
.c0 {
  -webkit-animation: eMLfYp 0.3s ease-in-out;
  animation: eMLfYp 0.3s ease-in-out;
}

.c1 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c2 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 1;
}

<style>
{
  "IS1": {
    "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS10": {
    "height": 10,
    "marginBottom": "10px",
  },
  "IS11": {
    "height": 10,
    "marginBottom": "10px",
  },
  "IS12": {
    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS13": {
    "height": 10,
    "marginBottom": "10px",
  },
  "IS14": {
    "height": 10,
    "marginBottom": "10px",
  },
  "IS15": {
    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS16": {
    "height": 10,
    "marginBottom": 0,
    "maxWidth": 240,
  },
  "IS17": {
    "height": 10,
    "marginBottom": 0,
    "maxWidth": 240,
  },
  "IS2": {
    "flex": 1,
  },
  "IS3": {
    "flex": 1,
  },
  "IS4": {
    "bottom": 0,
    "left": 0,
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 0,
  },
  "IS5": {
    "display": "table",
    "height": 0,
    "overflow": "hidden",
    "paddingBottom": "150%",
  },
  "IS6": {
    "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS7": {
    "height": 24,
    "marginBottom": "10px",
    "maxWidth": 300,
  },
  "IS8": {
    "height": 24,
    "marginBottom": "10px",
    "maxWidth": 300,
  },
  "IS9": {
    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "S1": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "min-width": "0px",
  },
  "S2": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "margin-bottom": "10px",
    "min-width": "100%",
  },
  "S3": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "height": "24px",
    "margin-bottom": "10px",
    "max-width": "300px",
    "min-width": "0px",
  },
  "S4": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "height": "10px",
    "margin-bottom": "10px",
    "min-width": "0px",
  },
  "S5": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "height": "10px",
    "margin-bottom": "0px",
    "max-width": "240px",
    "min-width": "0px",
  },
  "S6": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "min-width": "100%",
  },
  "S7": {
    "-ms-flex-align": "start",
    "-ms-flex-direction": "row",
    "-ms-flex-pack": "end",
    "-ms-flex-wrap": "wrap",
    "-webkit-align-items": "flex-start",
    "-webkit-box-align": "start",
    "-webkit-box-direction": "normal",
    "-webkit-box-lines": "multiple",
    "-webkit-box-orient": "horizontal",
    "-webkit-box-pack": "end",
    "-webkit-flex-direction": "row",
    "-webkit-flex-wrap": "wrap",
    "-webkit-justify-content": "flex-end",
    "align-items": "flex-start",
    "display": "flex",
    "flex-direction": "row",
    "flex-wrap": "wrap",
    "justify-content": "flex-end",
    "margin-bottom": "0px",
    "min-width": "0px",
  },
}
</style>

<indexweb__FadeIn>
  <div
    className="c0 S1"
  >
    <div
      className="S7"
    >
      <div
        className="S2"
      >
        <TimesImage
          aspectRatio={0.6666666666666666}
          fadeImageIn={false}
          highResSize={800}
          lowResSize={60}
          uri="https://img.io/img"
        />
      </div>
      <div
        className="S6"
      >
        <indexweb__FadeIn>
          <div
            className="c0 S1"
          >
            <Component>
              <Gradient
                className="IS8"
                degrees={264}
              />
              <Gradient
                className="IS11"
                degrees={267}
              />
              <Gradient
                className="IS14"
                degrees={267}
              />
              <Gradient
                className="IS17"
                degrees={267}
              />
            </Component>
          </div>
        </indexweb__FadeIn>
      </div>
    </div>
  </div>
</indexweb__FadeIn>
`;

exports[`2. card with reversed loading state 1`] = `
.c0 {
  -webkit-animation: eMLfYp 0.3s ease-in-out;
  animation: eMLfYp 0.3s ease-in-out;
}

.c1 {
  display: block;
  opacity: 0;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 2;
}

.c2 {
  display: block;
  opacity: 1;
  position: absolute;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
  z-index: 1;
}

<style>
{
  "IS1": {
    "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS10": {
    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS11": {
    "height": 10,
    "marginBottom": 0,
    "maxWidth": 240,
  },
  "IS12": {
    "height": 10,
    "marginBottom": 0,
    "maxWidth": 240,
  },
  "IS13": {
    "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS14": {
    "flex": 1,
  },
  "IS15": {
    "flex": 1,
  },
  "IS16": {
    "bottom": 0,
    "left": 0,
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 0,
  },
  "IS17": {
    "display": "table",
    "height": 0,
    "overflow": "hidden",
    "paddingBottom": "150%",
  },
  "IS2": {
    "height": 24,
    "marginBottom": "10px",
    "maxWidth": 300,
  },
  "IS3": {
    "height": 24,
    "marginBottom": "10px",
    "maxWidth": 300,
  },
  "IS4": {
    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS5": {
    "height": 10,
    "marginBottom": "10px",
  },
  "IS6": {
    "height": 10,
    "marginBottom": "10px",
  },
  "IS7": {
    "backgroundImage": "linear-gradient(267deg, #F9F9F9 0%, #EDEDED 100%)",
  },
  "IS8": {
    "height": 10,
    "marginBottom": "10px",
  },
  "IS9": {
    "height": 10,
    "marginBottom": "10px",
  },
  "S1": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "height": "24px",
    "margin-bottom": "10px",
    "max-width": "300px",
    "min-width": "0px",
  },
  "S2": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "height": "10px",
    "margin-bottom": "10px",
    "min-width": "0px",
  },
  "S3": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "height": "10px",
    "margin-bottom": "0px",
    "max-width": "240px",
    "min-width": "0px",
  },
  "S4": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "min-width": "0px",
  },
  "S5": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "margin-bottom": "10px",
    "min-width": "100%",
  },
  "S6": {
    "-ms-flex-align": "stretch",
    "-ms-flex-direction": "column",
    "-webkit-align-items": "stretch",
    "-webkit-box-align": "stretch",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "align-items": "stretch",
    "display": "flex",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "min-width": "100%",
  },
  "S7": {
    "-ms-flex-align": "start",
    "-ms-flex-direction": "row",
    "-ms-flex-pack": "end",
    "-ms-flex-wrap": "wrap",
    "-webkit-align-items": "flex-start",
    "-webkit-box-align": "start",
    "-webkit-box-direction": "normal",
    "-webkit-box-lines": "multiple",
    "-webkit-box-orient": "horizontal",
    "-webkit-box-pack": "end",
    "-webkit-flex-direction": "row",
    "-webkit-flex-wrap": "wrap",
    "-webkit-justify-content": "flex-end",
    "align-items": "flex-start",
    "display": "flex",
    "flex-direction": "row",
    "flex-wrap": "wrap",
    "height": "auto",
    "justify-content": "flex-end",
    "margin-bottom": "0px",
    "min-width": "0px",
  },
}
</style>

<indexweb__FadeIn>
  <div
    className="c0 S4"
  >
    <div
      className="S7"
    >
      <div
        className="S5"
      >
        <indexweb__FadeIn>
          <div
            className="c0 S4"
          >
            <Component>
              <Gradient
                className="IS3"
                degrees={264}
              />
              <Gradient
                className="IS6"
                degrees={267}
              />
              <Gradient
                className="IS9"
                degrees={267}
              />
              <Gradient
                className="IS12"
                degrees={267}
              />
            </Component>
          </div>
        </indexweb__FadeIn>
      </div>
      <div
        className="S6"
      >
        <TimesImage
          aspectRatio={0.6666666666666666}
          fadeImageIn={false}
          highResSize={800}
          lowResSize={60}
          uri="https://img.io/img"
        />
      </div>
    </div>
  </div>
</indexweb__FadeIn>
`;
